fix layout bugs

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -29,6 +29,10 @@ main {
     margin-bottom: -$footer-height;
 }
 
+.overlay {
+    display: none;
+}
+
 a {
     color: $primary--darker;
     
